--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
         </section>
         <!-- ========== End Section Skills ========== -->
         <!-- ========== Start Section Resume ========== -->
-        <section id="resume" class="resume py-2">
+        <!-- <section id="resume" class="resume py-2">
             <div class="container" id="resumeContent">
                 <div class="section-title">
                     <h2>Resume</h2>
@@ -307,7 +307,6 @@
                             <a href="javascript:void(0);" class="btn btn-dark fs-6" onclick="printResume()">
                                 <i class="fa fa-download"></i> Download Resume
                             </a>
-                            <!-- <a href="" target="_blank" class="btn btn-dark fs-6"><i class="fa fa-download"></i> Download Resume</a>  -->
                         </div>
                     </div>
                     <address>
@@ -433,7 +432,88 @@
                             Development of a tool that may facilitate the Sales Forecasting team to extend support to the 
                             customer. Designed and developed a dynamic dashboard for data visualization in various formats 
                             like tables. Made functionality to convert table data into Excel and download that excel.
-                        </em></p> -->
+                        </em></p> --
+                </div>
+            </div>
+        </section> -->
+
+        <section id="resume" class="resume py-2">
+            <div class="container" id="resumeContent">
+                <div class="section-title">
+                    <h2>Resume</h2>
+                    <div class="d-flex justify-content-between flex-wrap">
+                        <h4>Deepak Pandey</h4>
+                        <div class="d-flex align-items-center">
+                            <a href="javascript:void(0);" class="btn btn-dark fs-6" onclick="printResume()">
+                                <i class="fa fa-download"></i> Download Resume
+                            </a>
+                        </div>
+                    </div>
+                    <address>
+                        dp209804@gmail.com | +91 8445449182 | Ghaziabad, India
+                        <a href="https://dpandey2001.github.io/PERSONAL-PORTFOLIO/">https://dpandey2001.github.io/PERSONAL-PORTFOLIO/</a>
+                    </address>
+                    <h3 class="resume-title">Summary</h3>
+                    <p><em>Detail-oriented UI/UX Developer with a strong foundation in frontend development, specializing in Angular, Bootstrap, TypeScript, HTML, CSS, and JavaScript. Proven ability to create user-centric, responsive, and interactive applications. Excellent problem-solving skills and a collaborative mindset, seeking to leverage expertise in a dynamic team environment.</em></p>
+                </div>
+                <div class="row">
+                    <div class="col-lg-6" data-aos="fade-up">
+                        <h3 class="resume-title">Education</h3>
+                        <div class="resume-items">
+                            <h4>Bachelor of Computer Applications (BCA)</h4>
+                            <h5>2023-2026</h5>
+                            <p><em>IGNOU University, NOIDA, India</em></p>
+                            <p>Pursuing Bachelor of Computer Applications (BCA) with a focus on software development and design.</p>
+                        </div>
+                        <div class="resume-items">
+                            <h4>Diploma in Computer Science & Engineering</h4>
+                            <h5>2019-2022</h5>
+                            <p><em>UBTER University, Uttarakhand, India</em></p>
+                            <p>Completed Diploma in Computer Science & Engineering with a CGPA of 76.61%.</p>
+                        </div>
+        
+                        <h3 class="resume-title">Skills</h3>
+                        <div class="resume-items">
+                            <h4>Technical Skills</h4>
+                            <h5>Frontend Development</h5>
+                            <p><em>HTML, CSS, JavaScript, Bootstrap, Angular, TypeScript, React</em></p>
+                            <h5>Backend Development</h5>
+                            <p><em>Node.js, C#</em></p>
+                            <h5>Database Management</h5>
+                            <p><em>MySQL</em></p>
+                        </div>
+                    </div>
+        
+                    <div class="col-lg-6" data-aos="fade-up" data-delay="10">
+                        <h3 class="resume-title">Professional Experience</h3>
+                        <div class="resume-items">
+                            <h4>UI Developer</h4>
+                            <h5>2023-Present</h5>
+                            <p><em>HFCL, New Delhi, India</em></p>
+                            <ul>
+                                <li>Developed modular, single-page web applications using Angular, adhering to responsive design principles.</li>
+                                <li>Integrated third-party APIs for seamless data exchange and real-time updates.</li>
+                                <li>Created a reusable component library with Angular Material, enhancing development efficiency.</li>
+                                <li>Designed and developed dynamic dashboards for data visualization in various formats, including charts and tables.</li>
+                                <li>Implemented a chatbot using the Gemini API in Angular 13, enabling interactive user engagement.</li>
+                                <li>Developed an innovative application for generating QR codes for test results, ensuring compliance with industry standards.</li>
+                                <li>Created bulk upload functionality to process multiple files efficiently.</li>
+                                <li>Enabled functionality to convert table data into Excel format for easy data management and download.</li>
+                                <li>Ensured responsive design and attractive UI for enhanced user experience.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="mt-3">
+                    <h3 class="resume-title">Projects</h3>
+                    <p><em>
+                        <li><b>Development of QR Code Generation Tool:</b></li> Created an application that generates QR codes for test results, allowing users to access their results via scanning.
+                        <li><b>Sales Support Application:</b></li> Developed a tool to assist the Post-Sales Support team, featuring a dynamic dashboard for data visualization and Excel export functionality. Designed and developed a dynamic dashboard for data visualization in various
+                        formats like charts and tables. Made functionality to convert table data into Excel and download that excel.
+                        <li><b>Portfolio Website:</b> </li>Designed a personal portfolio website using HTML, CSS, and JavaScript, integrating Google Maps and a contact form that stores user input in local storage.
+                        <li><b>NPD (New Product Development):</b></li> Developed a tool to support post-development processes, including a dynamic dashboard and Excel export capabilities. Used Round Robin methord to move the product for approval in diffrent stages.
+                        <li><b>Sales Forecast:</b></li>Developed a tool to facilitate the Sales Forecasting team in extending support to customers. Designed and developed a dynamic dashboard for data visualization in various formats, including tables, and implemented functionality to convert table data into Excel for easy download.
+                    </em></p>
                 </div>
             </div>
         </section>
