--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
                                 <h4>Whatsapp:</h4>
                                 <p>8445449182</p>
                             </div>
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3501.333778380405!2d77.40966600000002!3d28.649723000000005!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cf14d81d1a927%3A0x56b55d44f0823ad2!2sRox%20Pizza%20Pratap%20Vihar!5e0!3m2!1sen!2sin!4v1734677970173!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3501.333778380405!2d77.40966600000002!3d28.649723000000005!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cf14d81d1a927%3A0x56b55d44f0823ad2!2sRox%20Pizza%20Pratap%20Vihar!5e0!3m2!1sen!2sin!4v1734677970173!5m2!1sen!2sin" width="100%" height="290px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
                     <div class="col-lg-7 d-flex align-items-stretch">
