--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                     </div>
                     <div class="col-lg-6" data-aos="fade-in" data-delay="100">
                         <div class="progress">
-                            <span class="skill">Angular <i class="val">90%</i></span>
+                            <span class="skill">Angular <i class="val">60%</i></span>
                             <div class="progress-bar-wrap">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
                                     aria-valuemax="100" title="Progress Bar">
@@ -253,7 +253,7 @@
                             </div>
                         </div>
                         <div class="progress">
-                            <span class="skill">Typescript <i class="val">85%</i></span>
+                            <span class="skill">Typescript <i class="val">70%</i></span>
                             <div class="progress-bar-wrap">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0"
                                     aria-valuemax="100" title="Progress Bar">
@@ -328,10 +328,10 @@
                             <h4>Technical Skills</h4>
                             <h5>Frontend Development</h5>
                             <p><em>HTML, CSS, JavaScript, Bootstrap, Angular, TypeScript, React</em></p>
-                              <h5>Backend Development</h5>
+                              <!-- <h5>Backend Development</h5>
                             <p><em>Node.js, C#</em></p>
                             <h5>Database Management</h5>
-                            <p><em>MySQL</em></p>
+                            <p><em>MySQL</em></p> -->
                             <h4> AI Skills</h4>
                             <p><em>Black box, Gemini, Prompt engineering, Chatbot  </em></p>
                           
