chnges in resume

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                         Bing, Vedio-Editing.
                     </p>
                 </div>
-                
+
                 <div class="row skill-content">
                     <div class="col-lg-6" data-aos="fade-in">
                         <div class="progress">
@@ -301,11 +301,14 @@
                             href="https://dpandey2001.github.io/PERSONAL-PORTFOLIO/">https://dpandey2001.github.io/PERSONAL-PORTFOLIO/</a>
                     </address>
                     <h3 class="resume-title">Summary</h3>
-                    <p><em>Detail-oriented UI/UX Developer with a strong foundation in frontend development,
-                            specializing in Angular, Bootstrap, TypeScript, HTML, CSS, and JavaScript. Proven ability to
-                            create user-centric, responsive, and interactive applications. Excellent problem-solving
-                            skills and a collaborative mindset, seeking to leverage expertise in a dynamic team
-                            environment.</em></p>
+                    <p><em>Skilled Web developer with more than 1 year and 8 months of excellent track record in
+                            designing,
+                            developing and implementing software applications. Utilize JavaScript frameworks like
+                            Angular, Angular,
+                            Bootstrap, Typescript, HTML, CSS, SQL, Node JS to write scalable and secure code with knack
+                            for
+                            problem-solving. Successfully optimized a visualization app resulting in 20% increase in
+                            efficiency. </em></p>
                 </div>
                 <div class="row">
                     <div class="col-lg-6" data-aos="fade-up">
@@ -329,13 +332,13 @@
                             <h4>Technical Skills</h4>
                             <h5>Frontend Development</h5>
                             <p><em>HTML, CSS, JavaScript, Bootstrap, Angular, TypeScript, React</em></p>
-                              <!-- <h5>Backend Development</h5>
+                            <!-- <h5>Backend Development</h5>
                             <p><em>Node.js, C#</em></p>
                             <h5>Database Management</h5>
                             <p><em>MySQL</em></p> -->
                             <h4> AI Skills</h4>
-                            <p><em>Black box, Gemini, Prompt engineering, Chatbot  </em></p>
-                          
+                            <p><em>Black box, Gemini, Prompt engineering, Chatbot </em></p>
+
                         </div>
                     </div>
 
@@ -348,8 +351,15 @@
                             <ul>
                                 <li> Developed a Certified CMMI Level 5 project in Angular Framework in the Organization
                                 </li>
+                                <li> Won the AI Ideation organized by the
+                                    organization and developed a Chabot using
+                                    Gemini API in angular 13 Node JS and Express
+                                    JS and used scraping logic as well as
+                                    extensions used LLM, Neural Structure, and
+                                    Cross domain bypass
+                                </li>
                                 <li>Developed modular, single-page web applications using Angular, adhering to
-                                    responsive design principles.</li>
+                                    responsive design principles and attractive UI for enhanced user experience.</li>
                                 <li>Integrated third-party APIs for seamless data exchange and real-time updates.</li>
                                 <li>Created a reusable component library with Angular Material, enhancing development
                                     efficiency.</li>
@@ -359,10 +369,10 @@
                                     engagement.</li>
                                 <li>Developed an innovative application for generating QR codes for test results,
                                     ensuring compliance with industry standards.</li>
-                                <li>Created bulk upload functionality to process multiple files efficiently.</li>
-                                <li>Enabled functionality to convert table data into Excel format for easy data
-                                    management and download.</li>
-                                <li>Ensured responsive design and attractive UI for enhanced user experience.</li>
+                                <!-- <li>Created bulk upload functionality to process multiple files efficiently.</li> -->
+                                <!-- <li>Enabled functionality to convert table data into Excel format for easy data
+                                    management and download.</li> -->
+                                <!-- <li>Ensured responsive design and attractive UI for enhanced user experience.</li> -->
                             </ul>
                         </div>
                     </div>
